fixed dark mode

--- a/css/airavat.css
+++ b/css/airavat.css
@@ -113,15 +113,15 @@
 
         @media (prefers-color-scheme: dark) {
             .body-bg {
-                background-color:hsla(15,33%,16%,1);
+                background-color:hsla(0,90%,5%,1);
                 background-image:
-                radial-gradient(at 0% 0%, hsla(139,5%,11%,1) 0px, transparent 50%),
-                radial-gradient(at 73% 74%, hsla(330,5%,11%,1) 0px, transparent 50%),
-                radial-gradient(at 16% 20%, hsla(354,5%,11%,1) 0px, transparent 50%),
-                radial-gradient(at 67% 15%, hsla(301,5%,11%,1) 0px, transparent 50%),
-                radial-gradient(at 14% 79%, hsla(251,5%,11%,1) 0px, transparent 50%),
-                radial-gradient(at 89% 33%, hsla(149,5%,11%,1) 0px, transparent 50%),
-                radial-gradient(at 52% 44%, hsla(38,5%,11%,1) 0px, transparent 50%);
+                radial-gradient(at 0% 0%, hsla(213,25%,10%,1) 0px, transparent 50%),
+                radial-gradient(at 73% 74%, hsla(44,25%,10%,1) 0px, transparent 50%),
+                radial-gradient(at 16% 20%, hsla(68,25%,10%,1) 0px, transparent 50%),
+                radial-gradient(at 67% 15%, hsla(15,25%,10%,1) 0px, transparent 50%),
+                radial-gradient(at 14% 79%, hsla(325,25%,10%,1) 0px, transparent 50%),
+                radial-gradient(at 89% 33%, hsla(223,25%,10%,1) 0px, transparent 50%),
+                radial-gradient(at 52% 44%, hsla(112,25%,10%,1) 0px, transparent 50%);
             }
 
             .card-bg {
